# ax-engine

./: .gitignore  BENCHMARKING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  SECURITY.md  deny.toml  pyproject.toml
crates/ax-bench/: Cargo.toml
crates/ax-bench/benches/: inference.rs
crates/ax-bench/src/: baseline.rs  lib.rs  main.rs  microbench.rs  parity.rs  perf.rs  prefill_profile.rs  profile.rs  report.rs  soak.rs
crates/ax-core/: Cargo.toml  build.rs
crates/ax-core/src/: lib.rs  thermal.rs
crates/ax-core/src/backend/: cpu.rs  kv_plan.rs  metal.rs  mod.rs  neon.rs  policy.rs
crates/ax-core/src/chat/: mod.rs
crates/ax-core/src/compute/: attention.rs  gdn.rs  gelu.rs  matmul.rs  mod.rs  rms_norm.rs  rope.rs  silu.rs  softmax.rs
crates/ax-core/src/gguf/: mmap.rs  mod.rs
crates/ax-core/src/kv/: cpu_kv.rs  gpu_kv.rs  mod.rs  page.rs  qwen35_kv.rs
crates/ax-core/src/memory/: arena.rs  budget.rs
crates/ax-core/src/metrics/: counters.rs
crates/ax-core/src/model/: arch_registry.rs  config.rs  decode.rs  execution_plan.rs  falcon.rs  forward.rs  gemma3.rs  glm.rs  llama.rs  mixtral.rs  mod.rs  prefill_schedule.rs  qwen3.rs  qwen35.rs  shared.rs  starcoder2.rs  weights.rs
crates/ax-core/src/quant/: mod.rs  q5_k.rs
crates/ax-core/src/sampling/: banned_tokens.rs  grammar.rs  logit_bias.rs  min_p.rs  mod.rs  repetition.rs  top_k.rs  top_p.rs
crates/ax-core/src/speculative/: mod.rs
crates/ax-core/src/tokenizer/: mod.rs  vocab.rs
crates/ax-engine-bench/: Cargo.toml  build.rs
crates/ax-engine-bench/benches/: inference.rs
crates/ax-engine-bench/examples/: cold_start_bench.rs  embed_pipeline_demo.rs  embed_rust_bench.rs
crates/ax-engine-bench/src/: args.rs  artifact_files.rs  artifact_summary.rs  baseline.rs  cli.rs  compare_json.rs  determinism.rs  doctor.rs  doctor_workflow.rs  environment_probe.rs  error.rs  generate_manifest.rs  inference_args.rs  inference_render.rs  json_io.rs  labels.rs  lib.rs  logging.rs  main.rs  metal_build.rs  microbench.rs  parity.rs  path_utils.rs  perf.rs  prefill_gap.rs  prefill_profile.rs  profile.rs  report.rs  route_json.rs  route_metadata.rs  route_readiness.rs  soak.rs  stats.rs  synthetic.rs  tests.rs  token_sources.rs  tui_app.rs
crates/ax-engine-bench/src/bench/: arch_config.rs  baseline.rs  microbench.rs  mod.rs  perf.rs  (+3 more)
crates/ax-engine-cli/: Cargo.toml
crates/ax-engine-cli/src/: args.rs  interactive.rs  main.rs  stream.rs
crates/ax-engine-cli/tests/: q6k_nr2_regression.rs
crates/ax-engine-core/: Cargo.toml
crates/ax-engine-core/src/: architecture.rs  architecture_registry.rs  convert.rs  engine.rs  execution_plan.rs  gemma4_unified.rs  generation.rs  gguf.rs  ids.rs  kv.rs  lib.rs  loop_detection.rs  media_digest.rs  model.rs  multimodal_adapter.rs  qwen3_vl.rs  request.rs  request_manager.rs  runner.rs  sampling.rs  scheduler.rs  unlimited_ocr.rs  vl_geometry.rs
crates/ax-engine-core/tests/: engine_step_err_after_shared_prefix_eviction.rs  kv_rollback_after_eviction_repro.rs
crates/ax-engine-metal/: Cargo.toml  build.rs
crates/ax-engine-metal/shaders/: attention.metal  dequant.metal  elementwise.metal  gdn.metal  matmul.metal  matmul_tensor.metal
crates/ax-engine-metal/src/: buffer.rs  device.rs  dispatch.rs  lib.rs  pipeline.rs  profile.rs  residency.rs
crates/ax-engine-microbench/: Cargo.toml  README.md  build.rs
crates/ax-engine-mlx/: Cargo.toml  build.rs
crates/ax-engine-mlx/src/: artifact_identity.rs  attention_mask.rs  batched_decode_certification.rs  batched_decode_policy.rs  batched_decode_session.rs  batched_kv_cache.rs  batched_linear_state.rs  batched_sampling.rs  bench_main.rs  decode_trace_main.rs  diffusion.rs  disk_page_store.rs  disk_prefix_cache.rs  fastpath.rs  gemma4_assistant_mtp.rs  gemma4_unified.rs  gemma4_vl.rs  generate.rs  kv_block_pool.rs  kv_cache.rs  lib.rs  linear_attention.rs  linear_attention_ops.rs  model.rs  mtp.rs  mtp_adaptive_gate.rs  ngram_accel.rs  pack_audit_main.rs  paged_attention.rs  per_layer_compile.rs  qwen3_vl.rs  runner.rs  sampling.rs  speculation_profile.rs  speculative.rs  turboquant.rs  turboquant_metal.rs  unlimited_ocr.rs  vision_feature_cache.rs  vl_fixture_tests.rs  (+2 more)
crates/ax-engine-py/: Cargo.toml  README.md  build.rs
crates/ax-engine-py/src/: dicts.rs  embedding.rs  errors.rs  gil.rs  json_to_py.rs  lib.rs  model.rs  request.rs  session.rs  stream.rs
crates/ax-engine-sdk/: Cargo.toml  build.rs
crates/ax-engine-sdk/src/: backend.rs  compat.rs  delegated_http.rs  delegated_openai.rs  edge_llm.rs  generate.rs  host.rs  lib.rs  llama_cpp.rs  llama_cpp_process.rs  mlx_lm.rs  model.rs  request.rs  routing.rs  session.rs  tokenizer.rs  vllm.rs
crates/ax-engine-server/: Cargo.toml  README.md  build.rs
crates/ax-engine-server/scripts/: compat_smoke.sh
crates/ax-engine-server/src/: admission.rs  anthropic.rs  api.rs  app_state.rs  args.rs  chat.rs  engine.rs  errors.rs  grpc.rs  grpc_auth.rs  grpc_metrics.rs  lan_advertise.rs  main.rs  metadata.rs  metrics.rs  model_load.rs  multimodal.rs  ollama.rs  rate_limit.rs  routes.rs  tasks.rs  tests.rs
crates/ax-engine-tui/: Cargo.toml
crates/ax-engine-tui/src/: action.rs  app.rs  lib.rs  logo_b64.txt  main.rs  profiles.rs  support.rs  web.rs
crates/ax-metal/: Cargo.toml  build.rs
crates/ax-metal/shaders/: attention.metal  dequant.metal  elementwise.metal  gdn.metal  matmul.metal
crates/ax-metal/src/: buffer.rs  device.rs  dispatch.rs  lib.rs  pipeline.rs  profile.rs
crates/ax-shim/: Cargo.toml  build.rs  cbindgen.toml
crates/ax-shim/include/: llama.h
crates/ax-shim/src/: backend.rs  context.rs  eval.rs  lib.rs  model.rs  sampling.rs  tokenize.rs  types.rs
crates/mlx-sys/: Cargo.toml  build.rs  build_provenance.rs
crates/mlx-sys/native/: activation.cpp  ax_shim.cpp  ax_shim.h  ax_shim_internal.h
crates/mlx-sys/src/: array.rs  closure.rs  error.rs  fast.rs  io.rs  lib.rs  mempressure.rs  metal.rs  op_count.rs  ops.rs  stream.rs  transforms.rs
crates/mlx-sys/tests/: build_provenance.rs  data_contiguity.rs
(+6594 files in other folders)
