[workspace]
members = [
    "crates/ax-engine-bench",
    "crates/ax-engine-core",
    "crates/ax-engine-microbench",
    "crates/ax-engine-mlx",
    "crates/ax-engine-py",
    "crates/ax-engine-sdk",
    "crates/ax-engine-server",
    "crates/mlx-sys",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
version = "6.4.4"

[workspace.dependencies]
base64 = "0.22"
fs2 = "0.4"
hound = "3"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wait-timeout = "0.2"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "fat"           # full cross-crate LTO for maximum runtime performance
codegen-units = 1     # single codegen unit lets the optimizer see the full crate graph
panic = "abort"       # omit unwinding tables; saves binary size and a branch per call-site
strip = "debuginfo"   # strip DWARF; keep symbol table for Instruments / cargo-flamegraph

[profile.release-native]
inherits = "release"
# Build with: RUSTFLAGS="-C target-cpu=native" cargo build --profile release-native
