[workspace]
members = [
    "crates/ax-engine-bench",
    "crates/ax-engine-core",
    "crates/ax-engine-microbench",
    "crates/ax-engine-mlx",
    "crates/ax-engine-py",
    "crates/ax-engine-sdk",
    "crates/ax-engine-server",
    "crates/mlx-sys",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
version = "6.7.0"

[workspace.dependencies]
base64 = "0.22"
fs2 = "0.4"
hound = "3"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png"] }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wait-timeout = "0.2"

[patch.crates-io]
# `metal 0.33.0` still depends on `block 0.1.6`, whose upstream package uses
# an uninhabited extern static type that Rust reports as future-incompatible.
block = { path = "vendor/block-0.1.6" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Restriction lints: surface high-risk panic patterns.
# Set to "warn" workspace-wide; escalate to "deny" in core hot paths
# (kv.rs, engine.rs, request_manager.rs) after audit.
# Test modules use #![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used))].
# See ax-internal/ADR-001-clippy-restriction-lints.md for rationale.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"
large_enum_variant = "warn"

# Dev builds (including `maturin develop`) otherwise compile the C++ shim at
# -O0, making any perf observation from a dev build unrepresentative. The cc
# crate picks this up through the per-package OPT_LEVEL cargo sets.
[profile.dev.package.mlx-sys]
opt-level = 2

[profile.release]
lto = "fat"           # full cross-crate LTO for maximum runtime performance
codegen-units = 1     # single codegen unit lets the optimizer see the full crate graph
panic = "abort"       # omit unwinding tables; saves binary size and a branch per call-site
strip = "debuginfo"   # strip DWARF; keep symbol table for Instruments / cargo-flamegraph

[profile.release-native]
inherits = "release"
# Build with: RUSTFLAGS="-C target-cpu=native" cargo build --profile release-native
