[workspace]
members = [
    "crates/ax-engine-bench",
    "crates/ax-engine-core",
    "crates/ax-engine-microbench",
    "crates/ax-engine-mlx",
    "crates/ax-engine-py",
    "crates/ax-engine-sdk",
    "crates/ax-engine-server",
    "crates/mlx-sys",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
version = "6.9.0"

[workspace.dependencies]
base64 = "0.22"
# TUI chat: markdown rendering of assistant replies (MIT, parser-only features).
pulldown-cmark = { version = "0.13", default-features = false }
# TUI chat composer: display-width columns so CJK/emoji align (direct dep; also
# pulled transitively by ratatui).
unicode-width = "0.2"
fs2 = "0.4"
hound = "3"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png"] }
# unstable-rendered-line-info: exposes Paragraph::line_count, which the TUI
# chat transcript uses to size its scroll buffer to the exact wrapped height.
# Semver-exempt upstream, so a minor ratatui bump may require touching that
# one call site (crates/ax-engine-bench/src/tui/screens/chat.rs).
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
# NOTE: tui-textarea (chat input editor) is deliberately absent: as of 0.7.0 it
# still links ratatui 0.29, which cannot type-unify with ratatui 0.30 widgets
# and would introduce a duplicate ratatui in the tree. Revisit when it releases
# ratatui 0.30 support.
tui-scrollview = "0.6"
serde_json = "1"
sha2 = "0.10"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
wait-timeout = "0.2"

[patch.crates-io]
# `metal 0.33.0` still depends on `block 0.1.6`, whose upstream package uses
# an uninhabited extern static type that Rust reports as future-incompatible.
block = { path = "vendor/block-0.1.6" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Restriction lints: surface high-risk panic patterns.
# Set to "warn" workspace-wide; escalate to "deny" in core hot paths
# (kv.rs, engine.rs, request_manager.rs) after audit.
# Test modules use #![cfg_attr(test, allow(clippy::unwrap_used, clippy::expect_used))].
# See ax-internal/ADR-001-clippy-restriction-lints.md for rationale.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"
large_enum_variant = "warn"

# Dev builds (including `maturin develop`) otherwise compile the C++ shim at
# -O0, making any perf observation from a dev build unrepresentative. The cc
# crate picks this up through the per-package OPT_LEVEL cargo sets.
[profile.dev.package.mlx-sys]
opt-level = 2

[profile.release]
lto = "fat"           # full cross-crate LTO for maximum runtime performance
codegen-units = 1     # single codegen unit lets the optimizer see the full crate graph
panic = "abort"       # omit unwinding tables; saves binary size and a branch per call-site
strip = "debuginfo"   # strip DWARF; keep symbol table for Instruments / cargo-flamegraph

[profile.release-native]
inherits = "release"
# Build with: RUSTFLAGS="-C target-cpu=native" cargo build --profile release-native

[profile.release-pyext]
inherits = "release"
# `panic = "abort"` is the right choice for the standalone server/bench/CLI
# binaries (fail-fast process, no embedding host to protect), but it is
# actively wrong for the Python extension module: PyO3 unconditionally
# wraps every #[pymethods]/#[pyfunction] call in catch_unwind and turns a
# caught panic into a normal, catchable PanicException — that promise only
# holds under unwind. Under abort, catch_unwind never runs, so any panic
# reachable from Python (including any `.expect()`/`.unwrap()` anywhere in
# the dependency graph this crate calls into) SIGABRTs the whole embedding
# Python process instead of raising an exception. Build the wheel with
# `maturin build --profile release-pyext` (see scripts/build-pypi-wheel.sh),
# not `--release`.
panic = "unwind"

[profile.release-server]
inherits = "release"
# Serving profile for `ax-engine-server`: unwind so the generation
# worker's catch_unwind containment (generation/service.rs) can retire a
# panicking model worker while the process and sibling models keep
# serving. Under the plain `release` profile's `panic = "abort"`, one MLX
# eval failure on the decode hot path (the FFI's documented
# panic-on-error strategy) aborts the whole server. Bench/CLI binaries
# keep `release`'s fail-fast abort. Build serving binaries with
# `cargo build -p ax-engine-server --profile release-server`.
panic = "unwind"
