[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ax-engine"
version = "6.0.1"
description = "Python bindings for AX Engine"
requires-python = ">=3.10"
readme = "crates/ax-engine-py/README.md"

[project.scripts]
ax-engine = "ax_engine._cli:main"
ax-engine-server = "ax_engine._cli:server"

[project.optional-dependencies]
download = [
    "mlx-lm>=0.31",
]
openai = [
    "fastapi>=0.110",
    "tokenizers>=0.15",
    "uvicorn[standard]>=0.29",
]

[tool.maturin]
manifest-path = "crates/ax-engine-py/Cargo.toml"
python-source = "python"
module-name = "ax_engine._ax_engine"
features = ["python-extension"]
# strip debug symbols from the release wheel to keep size down
strip = true
# Bundle pre-compiled Metal kernel assets so pip-installed ax-engine works out of the box.
# Maturin collects .py files automatically; binary and data files need explicit inclusion.
# mlx.metallib must live next to libmlx.dylib (ax_engine.dylibs/) so that MLX's
# current_binary_dir() discovery finds it; stripping python/ prefix places it correctly.
include = [
    { path = "python/ax_engine/_metal/build/ax_phase1_dense_path.metallib", format = ["wheel"] },
    { path = "python/ax_engine/_metal/build/ax_phase1_dense_path.air", format = ["wheel"] },
    { path = "python/ax_engine/_metal/metal/phase1-kernels.json", format = ["wheel"] },
    { path = "python/ax_engine/_metal/metal/kernels/phase1_dense_path.metal", format = ["wheel"] },
    { path = "python/ax_engine.dylibs/mlx.metallib", format = ["wheel"] },
    # ax-engine-server binary — staged by scripts/build-pypi-wheel.sh before maturin runs.
    # Placed inside ax_engine/_bin/ so delocate's @loader_path rewrite (../.dylibs/)
    # stays valid after pip installation. Exposed to the user's PATH via console_scripts.
    { path = "python/ax_engine/_bin/ax-engine-server", format = ["wheel"] },
    # Top-level orchestration CLI wraps source-compatible download and MTP tools.
    { path = "scripts/download_model.py", format = ["wheel"] },
    { path = "scripts/prepare_mtp_sidecar.py", format = ["wheel"] },
    { path = "scripts/check_mtp_sidecar_provenance.py", format = ["wheel"] },
]
# Explicitly exclude internal and developer-only paths from both wheel and sdist.
# .internal/ is also in .gitignore; this is belt-and-suspenders for maturin sdist.
exclude = [
    ".internal/**",
    ".claude/**",
    "CLAUDE.md",
    "agents.md",
    "AGENTS.md",
    "ax-code.json",
]
