[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "ax-engine"
version = "6.9.0"
description = "Python bindings for AX Engine"
requires-python = ">=3.10"
readme = "crates/ax-engine-py/README.md"
license = "Apache-2.0"
keywords = ["llm", "inference", "mlx", "apple-silicon", "local-ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/defai-digital/ax-engine"
Repository = "https://github.com/defai-digital/ax-engine"
Changelog = "https://github.com/defai-digital/ax-engine/releases"

[project.scripts]
ax-engine = "ax_engine._cli:main"
ax-engine-server = "ax_engine._cli:server"

[project.optional-dependencies]
download = [
    "huggingface-hub>=0.23",
    "mlx-lm>=0.31",
]
openai = [
    "fastapi>=0.110",
    "tokenizers>=0.15",
    "uvicorn[standard]>=0.29",
]
multimodal = [
    "pillow>=10",
]

[tool.maturin]
manifest-path = "crates/ax-engine-py/Cargo.toml"
python-source = "python"
module-name = "ax_engine._ax_engine"
features = ["python-extension"]
# Pin the unwind-capable extension profile for PEP-517 / default maturin
# builds. Note: an explicit `maturin build --release` / `maturin develop
# --release` still overrides this pin and inherits workspace `panic=abort`;
# use `maturin develop --profile release-pyext` (or omit --release so this
# pin applies). scripts/build-pypi-wheel.sh passes --profile release-pyext
# explicitly. A reachable Rust panic under abort SIGABRTs the host Python
# process instead of raising PanicException.
profile = "release-pyext"
# strip debug symbols from the release wheel to keep size down
strip = true
# Bundle pre-compiled Metal kernel assets so pip-installed ax-engine works out of the box.
# Maturin collects .py files automatically; binary and data files need explicit inclusion.
# mlx.metallib must live next to libmlx.dylib (ax_engine.dylibs/) so that MLX's
# current_binary_dir() discovery finds it; stripping python/ prefix places it correctly.
include = [
    { path = "python/ax_engine/_metal/build/ax_phase1_dense_path.metallib", format = ["wheel"] },
    { path = "python/ax_engine/_metal/build/ax_phase1_dense_path.air", format = ["wheel"] },
    { path = "python/ax_engine/_metal/metal/phase1-kernels.json", format = ["wheel"] },
    { path = "python/ax_engine/_metal/metal/kernels/phase1_dense_path.metal", format = ["wheel"] },
    { path = "python/ax_engine.dylibs/mlx.metallib", format = ["wheel"] },
    # ax-engine-server and ax-engine-bench binaries — staged by scripts/build-pypi-wheel.sh
    # before maturin runs. Placed inside ax_engine/_bin/ so delocate's @loader_path rewrite
    # (../.dylibs/) stays valid after pip installation. ax-engine-server is exposed via
    # console_scripts; ax-engine-bench is invoked by `ax-engine doctor` and friends.
    { path = "python/ax_engine/_bin/ax-engine-server", format = ["wheel"] },
    { path = "python/ax_engine/_bin/ax-engine-bench", format = ["wheel"] },
    # Native `ax-engine` binary — hosts the `ax-engine tui` subcommand that the
    # Python CLI execs. Staged alongside the others by build-pypi-wheel.sh.
    { path = "python/ax_engine/_bin/ax-engine", format = ["wheel"] },
    # Top-level orchestration CLI wraps source-compatible download and MTP tools.
    { path = "scripts/download_model.py", format = ["wheel"] },
    { path = "scripts/prepare_mtp_sidecar.py", format = ["wheel"] },
    { path = "scripts/prepare_gemma4_assistant_mtp.py", format = ["wheel"] },
    { path = "scripts/prepare_glm_mtp_sidecar.py", format = ["wheel"] },
    { path = "scripts/prepare_qwen36_mtp_sidecar.py", format = ["wheel"] },
    { path = "scripts/check_mtp_sidecar_provenance.py", format = ["wheel"] },
]
# Explicitly exclude internal and developer-only paths from both wheel and sdist.
# .internal/ is also in .gitignore; this is belt-and-suspenders for maturin sdist.
exclude = [
    ".internal/**",
    ".claude/**",
    "CLAUDE.md",
    "agents.md",
    "AGENTS.md",
    "ax-code.json",
]

# ---------------------------------------------------------------------------
# Lint/type-check config — scoped to the user-facing runtime package only.
# scripts/ is dev-only benchmark tooling and intentionally NOT linted.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
extend-exclude = ["scripts", "python/tests", "python/ax_engine/_ax_engine"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# __init__.py runs _setup_bundled_metal() before its first-party imports on
# purpose (Metal env must be set before the native extension loads); E402 is
# noise there. _cli.py execs helper scripts that aren't importable as modules.
[tool.ruff.lint.per-file-ignores]
"python/ax_engine/__init__.py" = ["E402", "SIM102"]

[tool.mypy]
python_version = "3.10"
# Scope: runtime package only. Scripts/tests are out of scope.
files = ["python/ax_engine"]
exclude = ['python/ax_engine/_ax_engine/|python/ax_engine/_metal/build/']
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# The native extension (_ax_engine) has no type stubs; the hand-written
# __init__.pyi provides the public surface. Third-party optional deps
# (tokenizers, fastapi) ship without py.typed markers.
ignore_missing_imports = true
