[package]
name = "ax-bench"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ax-engine-core = { path = "../ax-engine-core" }
ax-engine-sdk = { path = "../ax-engine-sdk", features = ["mlx-native"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
