[package]
name = "ax-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AX Engine core inference engine — GGUF loader, model, compute, KV cache, sampling"

[dependencies]
memmap2.workspace = true
byteorder.workspace = true
half.workspace = true
rayon.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
ax-metal.workspace = true

[dev-dependencies]
rstest.workspace = true
