[package]
name = "ax-engine-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AX Engine benchmark harness and soak test runner"

[dependencies]
ax-engine-core.workspace = true
ax-engine-metal.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
half.workspace = true

[[bin]]
name = "ax-engine-bench"
path = "src/main.rs"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "inference"
harness = false
