[package]
name = "ax-engine-bench"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ax-engine-core = { path = "../ax-engine-core" }
ax-engine-mlx = { path = "../ax-engine-mlx" }
ax-engine-sdk = { path = "../ax-engine-sdk", features = ["mlx-native", "tokenizer"] }
mlx-sys = { path = "../mlx-sys" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[[bin]]
name = "ax-engine"
path = "src/bin/ax-engine.rs"
