[package]
name = "ax-engine-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AX Engine CLI — llama.cpp-compatible command-line interface"

[[bin]]
name = "ax-engine"
path = "src/main.rs"

[dependencies]
ax-engine-core.workspace = true
ax-engine-metal.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde_json.workspace = true
