[package]
name = "ax-engine-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33.0"
objc = "0.2.7"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
