[package]
name = "ax-engine-mlx"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.rust]
unsafe_code = "allow"

[dependencies]
mlx-sys = { path = "../mlx-sys" }
ax-engine-core = { path = "../ax-engine-core" }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[[bin]]
name = "turboquant-microbench"
path = "src/bin/turboquant_microbench.rs"

[[bin]]
name = "mlx-bench"
path = "src/bench_main.rs"

[[bin]]
name = "rmsnorm-fused-probe"
path = "src/bin/rmsnorm_fused_probe.rs"

[[bin]]
name = "kernel-chain-batching-probe"
path = "src/bin/kernel_chain_batching_probe.rs"

[[bin]]
name = "residual-rmsnorm-fused-probe"
path = "src/bin/residual_rmsnorm_fused_probe.rs"

[[bin]]
name = "dequant-dtype-probe"
path = "src/bin/dequant_dtype_probe.rs"
