[package]
name = "ax-engine-mlx"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.rust]
unsafe_code = "allow"

[dependencies]
mlx-sys = { path = "../mlx-sys" }
ax-engine-core = { path = "../ax-engine-core" }
fs2.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[[bin]]
name = "mlx-bench"
path = "src/bench_main.rs"
