[package]
name = "ax-engine-mlx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints.rust]
unsafe_code = "allow"

[dependencies]
mlx-sys = { path = "../mlx-sys" }
ax-engine-core = { path = "../ax-engine-core" }
fs2.workspace = true
parking_lot = "0.12"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true

[[bin]]
name = "mlx-bench"
path = "src/bench_main.rs"

[[bin]]
name = "pack-audit"
path = "src/pack_audit_main.rs"

[[bin]]
name = "decode-trace"
path = "src/decode_trace_main.rs"
