[package]
name = "ax-engine-py"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true
description = "Preview Python bindings for AX Engine v6"
build = "build.rs"

[lib]
name = "_ax_engine"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python-extension = ["pyo3/extension-module"]

[dependencies]
ax-engine-sdk = { path = "../ax-engine-sdk", features = ["mlx-native"] }
pyo3 = { version = "0.29", features = ["abi3-py310"] }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

[build-dependencies]
pyo3-build-config = { version = "0.29", features = ["resolve-config"] }
