[package]
name = "ax-engine-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ax-engine-sdk = { path = "../ax-engine-sdk", features = ["mlx-native"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true

[[bin]]
name = "ax-engine-server"
path = "src/main.rs"
