[package]
name = "ax-engine-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ax-engine-sdk = { path = "../ax-engine-sdk", features = ["mlx-native"] }
axum = "0.7"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true

[[bin]]
name = "ax-engine-server"
path = "src/main.rs"
