[package]
name = "ax-engine-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ax-engine-sdk = { path = "../ax-engine-sdk", features = ["mlx-native", "tokenizer"] }
axum = "0.7"
base64.workspace = true
clap = { version = "4", features = ["derive"] }
hound.workspace = true
image.workspace = true
parking_lot = "0.12"
prost = "0.13"
serde.workspace = true
serde_json.workspace = true
symphonia.workspace = true
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12"
tower = "0.5"
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["test-util"] }

[lints]
workspace = true

[[bin]]
name = "ax-engine-server"
path = "src/main.rs"
