[package]
name = "ax-engine-tui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true

[[bin]]
name = "ax-engine-manager"
path = "src/main.rs"
