[package]
name = "ax-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AX Engine llama.cpp C API compatibility shim — produces libllama.dylib"

[lib]
crate-type = ["cdylib"]

[dependencies]
ax-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[build-dependencies]
cbindgen = "0.29"
