[package]
name = "mlx-sys"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints.rust]
# Internal MLX boundary: raw bindgen FFI plus safe wrappers live here for now.
unsafe_code = "allow"

[build-dependencies]
bindgen = "0.72"
cc = "1.2.60"
cmake = "0.1"
regex = "1"

[dependencies]
libc = "0.2"
memmap2 = "0.9"
serde_json = { workspace = true }
